ContrastHigh GTK3: fix view of mate-control-center

--- a/desktop-themes/ContrastHigh/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/ContrastHigh/gtk-3.0/gtk-widgets.css
@@ -283,6 +283,28 @@ GtkLevelBar.vertical {
     padding: 5px;
 }
 
+.button.default {
+    transition: all 400ms ease-out;
+    text-shadow: none;
+    color: @theme_fg_color;
+}
+
+/* ie. mate-control-center */
+.button.flat,
+.button.flat:hover,
+.button.flat:active:hover,
+.button.flat:checked:hover {
+    padding: 0px;
+    border-color: transparent;
+    background-color: transparent;
+    background-image: none;
+    color: @theme_fg_color;
+    box-shadow: inset 0 1px rgba(255,255,255,0), 0 1px rgba(255,255,255,0);
+    text-shadow: none;
+    icon-shadow: none;
+    border-image: none;
+}
+
 .button:active,
 .button:checked {
     background-color: @theme_button_active_bg;
